role:systemd_unit: Update README